vm/snapshots/exceptions-handling-simple_catch-SimpleCatchOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught exception
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught exception
----- STDERR -----
