vm/snapshots/exceptions-handling-wrong_type-WrongTypeErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException: NPE
	at exceptions.handling.wrong_type.WrongTypeErrMain.main(WrongTypeErrMain.java:6)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException: NPE
	at exceptions.handling.wrong_type.WrongTypeErrMain.main(WrongTypeErrMain.java:6)
