vm/snapshots/exceptions-propagation-constructor_exception-ConstructorExceptionErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.IllegalArgumentException: Exception from constructor
	at exceptions.propagation.constructor_exception.ConstructorExceptionErrMain$Foo.<init>(ConstructorExceptionErrMain.java:6)
	at exceptions.propagation.constructor_exception.ConstructorExceptionErrMain.main(ConstructorExceptionErrMain.java:10)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.IllegalArgumentException: Exception from constructor
	at exceptions.propagation.constructor_exception.ConstructorExceptionErrMain$Foo.<init>(ConstructorExceptionErrMain.java:6)
	at exceptions.propagation.constructor_exception.ConstructorExceptionErrMain.main(ConstructorExceptionErrMain.java:10)
