vm/snapshots/exceptions-propagation-from_catch_block-FromCatchBlockErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.IllegalArgumentException: New exception in catch
	at exceptions.propagation.from_catch_block.FromCatchBlockErrMain.main(FromCatchBlockErrMain.java:8)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.IllegalArgumentException: New exception in catch
	at exceptions.propagation.from_catch_block.FromCatchBlockErrMain.main(FromCatchBlockErrMain.java:8)
