vm/snapshots/exceptions-propagation-nonexistent_native-NonexistentNativeErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.UnsatisfiedLinkError: void exceptions.propagation.nonexistent_native.NonexistentNativeErrMain.fakeNative()
	at exceptions.propagation.nonexistent_native.NonexistentNativeErrMain.fakeNative(Native Method)
	at exceptions.propagation.nonexistent_native.NonexistentNativeErrMain.main(NonexistentNativeErrMain.java:7)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.UnsatisfiedLinkError: 'void exceptions.propagation.nonexistent_native.NonexistentNativeErrMain.fakeNative()'
	at exceptions.propagation.nonexistent_native.NonexistentNativeErrMain.fakeNative(Native Method)
	at exceptions.propagation.nonexistent_native.NonexistentNativeErrMain.main(NonexistentNativeErrMain.java:7)
